--- a/CSS/wordManagement.css
+++ b/CSS/wordManagement.css
@@ -1,100 +1,145 @@
 body {
-  font-family: "Microsoft Yahei";
-  color: #333;
-  letter-spacing: 0.05em; }
+  background-color: #f5f5f5; }
 
 button {
   background: none;
   border: none; }
 
+.main {
+  position: relative;
+  max-width: 1280px;
+  margin: 0 auto; }
+
 .backDrop {
   position: relative;
   max-width: 1280px;
-  min-height: 780px;
-  margin: 40px auto;
-  border-radius: 10px;
-  box-shadow: 1px 1px 10px #ccc;
-  background: #f7fbfc; }
+  min-height: 650px;
+  background-color: #fff; }
 
-.list {
-  width: 69.9%;
+.left {
+  max-width: 900px;
   display: inline-block; }
 
-.tabBar {
-  padding: 0px 20px 0 20px;
-  position: relative;
-  border-radius: 10px 0 0 0;
-  background: #6ab3cb;
-  color: #fff; }
-  .tabBar h1 {
-    display: inline-block;
-    margin: 20px 5px -3px 5px;
-    padding: 0 25px 15px 25px;
-    border-bottom: 2px;
-    font-size: 1em; }
-  .tabBar .selected {
-    border-bottom: solid #384a51; }
-  .tabBar .search {
-    position: absolute;
-    top: 15px;
-    right: 20px; }
-    .tabBar .search input {
-      margin-top: -5px;
-      border: none;
-      width: 250px;
-      padding: 5px 10px;
-      background: #f7fbfc;
-      color: #999; }
-      .tabBar .search input:hover, .tabBar .search input:focus {
-        color: #333;
-        background: #fff; }
-    .tabBar .search button {
-      background: #fff;
-      padding: 5px 10px; }
-      .tabBar .search button:hover {
-        color: #6ab3cb; }
+.right {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 380px;
+  height: 100%;
+  border-left: 1px solid #eee; }
 
-.checkList {
+.inputBox .cancle {
+  display: none; }
+
+.tabBar img {
+  float: left;
+  padding: 20px;
+  width: 30px; }
+.tabBar h1 {
+  display: inline-block;
+  padding: 10px 20px;
+  border-bottom: 2px;
+  color: #ccc;
+  font-size: 1em; }
+.tabBar .selected {
+  color: #6ab3cb;
+  border-bottom: solid #6ab3cb; }
+
+select {
   background: #fff;
-  padding: 10px;
+  padding: 5px;
+  border: none;
   color: #ccc;
   font-size: 0.8em; }
 
 .toolBar {
-  position: absolute;
-  top: 80px;
-  right: 420px; }
-  .toolBar .page button {
-    padding: none;
-    width: 20px;
-    border-radius: 5px;
-    background: #fff; }
-  .toolBar .option button {
-    margin: 0 0px 10px 0;
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
-    background: #6ab3cb;
-    color: #fff; }
+  margin: 20px 0;
+  position: relative; }
+  .toolBar .searchBar {
+    display: inline-block;
+    position: relative;
+    width: 440px; }
+    .toolBar .searchBar input {
+      height: 40px;
+      padding: 0 60px 0 20px;
+      width: 440px;
+      box-sizing: border-box;
+      border: none; }
+      .toolBar .searchBar input:focus, .toolBar .searchBar input:hover, .toolBar .searchBar input:focus + button, .toolBar .searchBar input:hover + button {
+        box-shadow: 5px 5px 40px #ddd; }
+    .toolBar .searchBar .search {
+      padding: 0;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      background: #6ab3cb;
+      width: 40px; }
+      .toolBar .searchBar .search:hover ~ input {
+        box-shadow: 5px 5px 40px #ddd; }
+  .toolBar img {
+    width: 20px; }
+  .toolBar .action {
+    position: absolute;
+    right: 0;
+    display: inline-block; }
+    .toolBar .action button {
+      margin: 0 0px 0px 10px;
+      height: 40px;
+      padding: 0 20px;
+      text-align: center;
+      border: 1px solid #eee;
+      background: #fff;
+      color: #ccc; }
+    .toolBar .action .highline {
+      background-color: #6ab3cb;
+      border: #6ab3cb;
+      color: #fff; }
 
 table {
-  padding: 60px 20px 20px 20px;
+  padding: 0 20px 0 20px;
   box-sizing: border-box;
   width: 100%;
   text-align: left;
-  color: #333; }
-  table tr {
+  color: #ccc; }
+  table .tableCheckBox {
+    display: none; }
+    table .tableCheckBox:checked ~ div {
+      background-color: #f5f5f5;
+      border: #fff; }
+    table .tableCheckBox:checked + label {
+      background: url("../images/icon/checked.png");
+      background-size: 14px;
+      background-repeat: no-repeat;
+      border: none; }
+  table label {
     display: block;
-    margin: 15px 0;
-    padding: 10px 0;
-    border-radius: 5px;
+    width: 14px;
+    height: 14px;
+    border: 1px #cccc solid; }
+  table div {
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    border-radius: 5px; }
+  table tr {
+    position: relative;
+    display: block;
+    padding: 15px 0;
     width: 100%;
-    background: #fff;
-    border-bottom: 1px; }
+    border-bottom: 1px;
+    border-radius: 5px; }
     table tr:first-child {
-      background: none;
-      padding: 0;
-      box-shadow: none; }
+      border-bottom: 1px solid #eee; }
+      table tr:first-child:hover {
+        background-color: #fff; }
+    table tr:hover {
+      margin-right: -20px;
+      background: #f5f5f5; }
   table th {
     font-weight: normal;
     font-size: 0.8em;
@@ -103,104 +148,71 @@ table {
     background: #fff;
     padding: 5px;
     border-radius: 2px; }
-  table #selected {
-    background: #6ab3cb;
-    color: #fff; }
   table img {
     height: 1em; }
 
 .icon {
   width: 16px; }
 
-.waitForLogging th:first-child, .loggedData th:first-child {
+.waitForLogging th:first-child, .waitForLogging td:first-child, .loggedData th:first-child, .loggedData td:first-child, .plan th:first-child, .plan td:first-child {
+  padding: 0 0 0 40px;
+  width: 30px; }
+.waitForLogging th:last-child, .waitForLogging td:last-child, .loggedData th:last-child, .loggedData td:last-child, .plan th:last-child, .plan td:last-child {
+  padding: 0 40px 0 0; }
+.waitForLogging th:nth-child(2), .waitForLogging td:nth-child(2), .loggedData th:nth-child(2), .loggedData td:nth-child(2), .plan th:nth-child(2), .plan td:nth-child(2) {
+  color: #6ab3cb;
+  font-weight: bold;
+  overflow: hidden;
+  width: 200px; }
+.waitForLogging th:nth-child(3), .waitForLogging td:nth-child(3), .loggedData th:nth-child(3), .loggedData td:nth-child(3), .plan th:nth-child(3), .plan td:nth-child(3) {
+  overflow: hidden;
+  width: 200px; }
+
+.plan td:nth-child(4), .plan td:nth-child(5), .plan td:nth-child(6), .plan td:nth-child(7), .plan th:nth-child(4), .plan th:nth-child(5), .plan th:nth-child(6), .plan th:nth-child(7), .loggedData td:nth-child(4), .loggedData td:nth-child(5), .loggedData td:nth-child(6), .loggedData td:nth-child(7), .loggedData th:nth-child(4), .loggedData th:nth-child(5), .loggedData th:nth-child(6), .loggedData th:nth-child(7) {
   width: 50px; }
-.waitForLogging td:first-child, .loggedData td:first-child {
-  width: 50px;
-  box-sizing: border-box;
-  padding: 0 0 0 20px; }
-.waitForLogging td:nth-child(2), .loggedData td:nth-child(2) {
-  font-weight: bold; }
+.plan td:nth-child(8), .plan td:nth-child(9), .plan th:nth-child(8), .plan th:nth-child(9), .loggedData td:nth-child(8), .loggedData td:nth-child(9), .loggedData th:nth-child(8), .loggedData th:nth-child(9) {
+  color: #ccc;
+  text-align: right;
+  width: 80px; }
 
-.waitForLogging th:nth-child(2), .waitForLogging td:nth-child(2) {
-  width: 200px; }
-.waitForLogging th:nth-child(3), .waitForLogging td:nth-child(3) {
-  width: 200px; }
-.waitForLogging th:nth-child(4), .waitForLogging td:nth-child(4) {
-  width: 150px; }
-.waitForLogging th:nth-child(5), .waitForLogging td:nth-child(5) {
-  width: 100px; }
-
-.loggedData th:nth-child(2), .loggedData td:nth-child(2), .plan th:nth-child(2), .plan td:nth-child(2) {
-  width: 200px; }
-.loggedData th:nth-child(3), .loggedData td:nth-child(3), .plan th:nth-child(3), .plan td:nth-child(3) {
-  width: 200px; }
-.loggedData th:nth-child(4), .loggedData th:nth-child(5), .loggedData th:nth-child(6), .loggedData th:nth-child(7), .loggedData td:nth-child(4), .loggedData td:nth-child(5), .loggedData td:nth-child(6), .loggedData td:nth-child(7), .plan th:nth-child(4), .plan th:nth-child(5), .plan th:nth-child(6), .plan th:nth-child(7), .plan td:nth-child(4), .plan td:nth-child(5), .plan td:nth-child(6), .plan td:nth-child(7) {
-  width: 40px; }
-.loggedData th:nth-child(8), .loggedData td:nth-child(8), .plan th:nth-child(8), .plan td:nth-child(8) {
-  width: 100px; }
-
-.plan td:nth-child(8), .plan td:nth-child(9), .plan td:nth-child(10), .plan th:nth-child(8), .plan th:nth-child(9), .plan th:nth-child(10) {
+.loggedData td:last-child {
+  text-align: center; }
+.loggedData td:nth-child(8) {
   width: 60px; }
 
-.inputBox {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 30%;
-  height: 780px;
-  border-radius: 0 10px 10px 0;
-  background: #fff; }
-  .inputBox input {
-    border: solid 1px  #ccc;
-    background: #f7fbfc; }
-  .inputBox #Cword, .inputBox #Ctranslation {
-    width: 100%;
+.waitForLogging td:nth-child(3), .waitForLogging td:nth-child(3), .waitForLogging th:nth-child(3), .waitForLogging th:nth-child(3) {
+  width: 300px; }
+.waitForLogging td:nth-child(4), .waitForLogging th:nth-child(4) {
+  width: 100px; }
+.waitForLogging td:nth-child(5), .waitForLogging th:nth-child(5) {
+  width: 100px;
+  text-align: right; }
+
+.pages {
+  position: relative;
+  width: 200px;
+  margin: 20px auto 0 auto;
+  color: #ccc; }
+  .pages input {
+    height: 40px;
+    padding: 0 60px 0 60px;
+    width: 200px;
     box-sizing: border-box;
-    padding: 10px;
     border: none;
-    color: #6ab3cb;
-    font-size: 1.5em; }
-  .inputBox #Esymbol, .inputBox #Asymbol {
-    border: none;
-    width: 80px;
-    padding: 10px;
-    background: #fff;
-    color: #ccc; }
-  .inputBox .line {
-    margin-top: 30px;
-    position: relative;
-    padding: 0  0 0 100px; }
-    .inputBox .line #Ctype {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      width: 100px; }
-  .inputBox .level {
-    padding: 20px 0 0 10px; }
-  .inputBox #Editing {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 40px 20px; }
-  .inputBox textarea {
-    margin: 20px 0 0 0;
-    padding: 10px;
-    border: none;
-    background: #f7fbfc;
-    font-family: "Microsoft Yahei";
-    color: #333;
-    line-height: 1.5em;
-    letter-spacing: 0.05em; }
-  .inputBox .addSample, .inputBox .addTranslation {
-    margin-bottom: 10px;
-    padding: 20px 0;
-    border-bottom: 1px solid #ccc; }
-  .inputBox .addTranslation {
-    border: none; }
-  .inputBox .submit {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
-    background: #6ab3cb;
-    color: #fff; }
+    text-align: center; }
+    .pages input:focus, .pages input:hover {
+      box-shadow: 5px 5px 40px #ddd;
+      color: #333; }
+  .pages button {
+    padding: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 40px; }
+    .pages button:first-child {
+      left: 0; }
+    .pages button:last-child {
+      right: 0; }
+    .pages button:hover {
+      background-color: #6ab3cb;
+      color: #fff; }
